Fix remaining switch expressions and pattern matching for Java 8
- Convert switch expressions to traditional switch statements in
  PrologueInjector, ThreadRestorer, RawBytecodeScanner
- Replace pattern matching instanceof with traditional casts in
  ThreadRestorer
- Update test files for Java 8 compatibility (var, List.of, Map.of,
  String.isBlank, text blocks, Files.writeString, Stream.toList, etc.)

https://claude.ai/code/session_01UHzJZuUdL5vpz2QML1dc1f